# rag-with-crawler

./: .gitignore  DevelopmentQuestions.csv  main.py  pyproject.toml  requirements.txt  test.db  test.txt
app/: 1_RAG.ipynb  RAG.ipynb  c1.py  chunker.py  config.py  crawler_playground.ipynb  db.py  evaluator.py  llm_apis.ipynb  parrot.ipynb  version1.py
questions/: IctFootballQuestions 2024-08-30.csv  IctFootballQuestions 2024-10-13.csv
spider/: config.py  crawler_v1.py  crawler_v1_crawl4ai.py  main.py  page_counter.py  spider.py  spider2.py  url_normalizer.py
utils/: io.py
