[tool.poetry]
name = "parrot"
version = "0.1.0"
description = ""
authors = ["MohammadAmin Vali"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.2.5"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
ipykernel = "^6.29.5"
crawl4ai = "^0.6.3"
scrapy = "^2.13.0"
sqlalchemy = "^2.0.41"
langchain = "^0.3.27"
pinecone = "^7.3.0"
langchain-pinecone = "^0.2.11"
langchain-community = "^0.3.27"
sentence-transformers = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
