[tool.poetry]
name = "parrot"
version = "0.1.0"
description = ""
authors = ["MohammadAmin Vali"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.2.5"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
ipykernel = "^6.29.5"
crawl4ai = "^0.6.3"
scrapy = "^2.13.0"
sqlalchemy = "^2.0.41"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
openai = "^1.97.1"
langchain-core = "^0.3.72"
langchain-openai = "^0.3.28"
langchain-chroma = "^0.2.5"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
